--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
-      <h1>All Cocktails</h1>
+      <h1>Venez boire ces bonnes mixtures </h1>
 
-      <%= link_to 'New cocktail', new_cocktail_path, class: 'btn btn-primary' %>
+      <%= link_to 'New cocktail', new_cocktail_path, class: 'btn btn-success' %>
 
       <ul>
         <% @cocktails.each do |cocktail| %>
