--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -4,7 +4,7 @@
       <h1>New dose</h1>
 
       <%= simple_form_for [@cocktail, @dose] do |f| %>
-        <%= f.input :ingredient %>
+        <%= f.association :ingredient %>
         <%= f.input :description %>
         <%= f.submit "Add dose", class: 'btn btn-danger' %>
       <% end %>
