--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,6 +5,10 @@
       <p>Best cocktails</p>
 
       <%= link_to 'See all cocktails', cocktails_path, class: 'btn btn-primary' %>
+
+      <%= cl_image_tag("me9yvsg8mwckbo0b70pi",
+      width: 400, height: 300, crop: :fill) %>
+
     </div>
   </div>
 </div>
